cmake_minimum_required(VERSION 4.0)
project(DSA)

set(CMAKE_CXX_STANDARD 14)

add_executable(DSA
        Arrays/arrDimensions.cpp
        Arrays/memoryAccess.cpp
        Arrays/staticDynamic.cpp
        Arrays/twosum.cpp
        Recursion/fact.cpp
        Recursion/fbM.cpp
        Recursion/fibinacci.cpp
        Recursion/nNaturalnumbers.cpp
        Recursion/recursiveFb.cpp
        Recursion/sumNnumbers.cpp
        Recursion/test1.cpp
        Arrays/revS.cpp
        Arrays/test.cpp
        Arrays/maxElement.cpp
        Arrays/minElement.cpp
        Arrays/sumElements.cpp
        Arrays/countOccur.cpp
        Arrays/reverseArray.cpp
        Arrays/isArraySorted.cpp
        Arrays/secondLargest.cpp)
